fix horizontal scroll

--- a/src/scss/blocks/_details.scss
+++ b/src/scss/blocks/_details.scss
@@ -9,6 +9,10 @@
   border: 1px solid;
   border-color: rgba(68, 68, 68, 0.8);
   backdrop-filter: blur(15px);
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
 
   z-index: 5;
 
