--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -86,6 +86,10 @@
       bottom: -265px;
       right: -59px;
     }
+    &_6,
+    &_7 {
+      display: none;
+    }
   }
 
   &__line {
